# vvvhttp

./: .gitignore  CMakeLists.txt  README.md  handler_example.c  main.c  main_libfuzzer.c  meson.build  meson_options.txt
include/vvvhttp/: internal.h  vvvhttp.h  vvvlog.h  vvvstring.h
tests/: common.h  meson.build  parsing.c  serializing.c  test_driver.c
vvvhttp/: meson.build  parser.c  response.c  router.c  serializer.c  util.c
